--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,22 +10,41 @@
 
 <body>
     <button id="theme-button" class="theme-button">Dark theme</button>
-    <div class="chat-container">
-        <div class="chat-header">
-            <h2>Chat</h2>
-            <div class="model-selector">
-                <label for="model-select">Select Model:</label>
-                <select id="model-select">
-                </select>
-                <div id="preloader" class="preloader"></div>
+    <div class="main-container">
+        <div class="side-panel">
+            <button id="loadButton" class="load-button">Add category</button>
+            <div class="toggle-boxes">
+                <label class="toggle-container">
+                    <input type="checkbox" id="toggle1">
+                    <span class="toggle-label">Option 1</span>
+                </label>
+                <label class="toggle-container">
+                    <input type="checkbox" id="toggle2">
+                    <span class="toggle-label">Option 2</span>
+                </label>
+                <label class="toggle-container">
+                    <input type="checkbox" id="toggle3">
+                    <span class="toggle-label">Option 3</span>
+                </label>
             </div>
         </div>
-        <div class="chat-box" id="chatBox">
-            <!-- Messages will appear here -->
-        </div>
-        <div class="chat-input">
-            <input type="text" id="messageInput" class="message-input" placeholder="Type your message...">
-            <button id="sendButton" class="send-button">Send</button>
+        <div class="chat-container">
+            <div class="chat-header">
+                <h2>Chat</h2>
+                <div class="model-selector">
+                    <label for="model-select">Select Model:</label>
+                    <select id="model-select">
+                    </select>
+                    <div id="preloader" class="preloader"></div>
+                </div>
+            </div>
+            <div class="chat-box" id="chatBox">
+                <!-- Messages will appear here -->
+            </div>
+            <div class="chat-input">
+                <input type="text" id="messageInput" class="message-input" placeholder="Type your message...">
+                <button id="sendButton" class="send-button">Send</button>
+            </div>
         </div>
     </div>
     <script src="index.js"></script>
